--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=liberewha-unis
+spring.datasource.url=jdbc:mysql://liberewha-unis-rds.cp8ewisku8ts.ap-northeast-2.rds.amazonaws.com:3306/liberewha_db?useSSL=false&characterEncoding=UTF-8&serverTimezone=UTC&allowPublicKeyRetrieval=true
+spring.datasource.username=admin
+spring.datasource.password=liberewha
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
